# qtmsu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tmsumanage.cpp  tmsumanage.h
kde-dolphin-shortcuts/: README.md  qtmsu-dolphin.khotkeys   qtmsu-dolphin.py
